chat: fix hover event for 'jump to new msg' button

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1460,7 +1460,10 @@
             c: 0 0 hl;
             transition: background 0.15s ease;
             box-shadow: inner, 0 4px 8px sh;
-            &:hover { c: 0 0 bd }
+            &:hover {
+                c: 0 0 bd;
+                svg path { fill-opacity: 1 i }
+            }
             .P6z4j { c: white 0 ac }
         }
         /// Messages area.
